Trigger www.gshakhn.com build at end of this build.
The www.gshakhn.com build downloads the resulting resume.pdf from this
build in order to publish on the blog. Need to republish the blog
whenever resume is updated.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,3 +9,5 @@ pages:
       - public
   only:
     - master
+  after_script:
+    - curl -X POST -F token=$GSHAKHN_TOKEN -F ref=master https://gitlab.com/api/v3/projects/$GSHAKHN_PROJECT_ID/trigger/builds
