Try to trigger gshakhn.com build differently.
db3fa09ad3a819e3832916718493da4479b0ee2f didn't work as expected.
* `curl` is not installed on schickling/latex.
* `curl` was trying to run before the artifacts were saved.

Ideal is that resume gets build/deployed, and then the gshakhn.com job
is triggered. Hopefully this build file will accomplish that.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
+stages:
+ - deploy
+ - trigger-other-builds
+
 pages:
   stage: deploy
   image: schickling/latex
@@ -9,5 +13,8 @@ pages:
       - public
   only:
     - master
-  after_script:
+
+trigger-gshakhn-com:
+  stage: trigger-other-builds
+  script: 
     - curl -X POST -F token=$GSHAKHN_TOKEN -F ref=master https://gitlab.com/api/v3/projects/$GSHAKHN_PROJECT_ID/trigger/builds
